# sshuttle-ui

./: .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  release.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  package.yml  release.yml  semantic-release.yml
docs/: DISTRIBUTION.md
public/: CHANGELOG.md
scripts/: bump-release-version.mjs
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: check_resolver.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: audit.rs  bindings_export.rs  error.rs  lib.rs  main.rs  policy.rs  state.rs
src-tauri/src/automation/: mod.rs  rules.rs
src-tauri/src/commands/: audit.rs  backup.rs  connection.rs  diagnostics.rs  dns.rs  logs.rs  mod.rs  network.rs  policy.rs  preflight.rs  profiles.rs  settings.rs  ssh.rs  ssh_import.rs  sudo.rs  support.rs  system.rs  touch_id_sudo.rs  update.rs  window.rs
src-tauri/src/dns/: manager.rs  mod.rs
src-tauri/src/network/: interfaces.rs  mod.rs  monitor.rs
src-tauri/src/security/: keychain.rs  mod.rs  redact.rs
src-tauri/src/ssh/: config.rs  keys.rs  mod.rs
src-tauri/src/sshuttle/: command.rs  event.rs  manager.rs  mod.rs  process_scanner.rs  resolver.rs  sampler.rs
src-tauri/src/storage/: active_session.rs  db.rs  history.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/system/: autostart.rs  deep_link.rs  icon_overlay.rs  mod.rs  notification.rs  tray.rs  tray_actions.rs  watcher.rs  window_guard.rs
src/components/: ChangelogDrawer.tsx  CloseConfirmDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectionHeatmap.tsx  ConsentModal.tsx  EmptyState.tsx  ErrorBoundary.tsx  EulaModal.tsx  KillSwitchOverlay.tsx  LiveLogsPanel.tsx  NavigateRegistrar.tsx  OnboardingModal.tsx  OrphanBanner.tsx  PageLoading.tsx  PamTouchIdDialog.tsx  PhaseBadge.tsx  PolicyBadge.tsx  PreflightCard.tsx  ProfileForm.tsx  (+11 more)
(+40 files in other folders)
