[package]
name = "sshuttle-ui"
version = "1.0.1"
description = "Modern desktop GUI for sshuttle"
authors = ["sshuttle-ui contributors"]
edition = "2021"
rust-version = "1.79"
license = "MIT"

[lib]
name = "sshuttle_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
directories = "5.0"
which = "7.0"
regex = "1.11"
plist = "1"
parking_lot = "0.12"
once_cell = "1.20"
dashmap = "6.1"
tokio-util = "0.7"
shell-escape = "0.1"
image = { version = "^0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
